第一次提交

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -68,7 +68,8 @@ social:
 
 # --------------------------------------
 # Favicon（網站圖標）
-favicon: http://sbgzpdptj.hn-bkt.clouddn.com/browser-logo.png  #收藏图标
+favicon: https://img.picgo.net/2024/04/06/browser-logo0a9a9907c8397ed6.png
+# http://sbgzpdptj.hn-bkt.clouddn.com/browser-logo.png  #收藏图标
 
 # Avatar (頭像)
 avatar:
