--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "gulp": "^5.0.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^9.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-asset-image": "^1.0.0",
